# json-query

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.sh  coverage.sh  format.sh  jsonquery
bench/: CMakeLists.txt  bench.cpp  json.hpp  main.cpp  selectors.hpp
src/: CMakeLists.txt  cli.hpp  errors.hpp  jsonquery.cpp  main.cpp  selector_driver.hpp  selector_parser.yy  selectors.hpp  utils.hpp
src/json/: json.hpp  parser.hpp  types.cpp  types.hpp
src/selectors/: driver.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.ll  selector_driver.hpp  selector_parser.cpp  selector_parser.hpp  selector_parser.yy  selector_type.hpp  selector_types.hpp  selectors.hpp  types.hpp
test/: CMakeLists.txt  apply_selectors.hpp  array.json  array2.json  generated.json  json.cpp  json.hpp  laptops.json  laptops2.json  main.cpp  selectors.cpp  selectors.hpp  test_fuzzer.cpp
tests/: arrays.json  simple.json  simple2.json
